# lemonade

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  NOTICE.md  README.md  mkdocs.yml  setup.ps1  setup.sh
.devcontainer/: Dockerfile
.github/actions/build-linux-deb/: action.yml
.github/actions/build-macos-dmg/: action.yml
.github/actions/cleanup-processes-linux/: action.yml
.github/actions/generate-release-notes/: action.yml
.github/actions/get-version/: action.yml
.github/actions/install-lemonade-deb/: action.yml
.github/actions/install-lemonade-server-dmg/: action.yml
.github/actions/setup-macos-keychain/: action.yml
.github/workflows/: claude-review.yml  cpp_server_build_test_release.yml  monitor_selfhosted_runners.yml  test-new-runner.yml
data/: lemonade-server.service.in  lemonade-web-app  lemonade.conf  lemonade.conf.in  secrets.conf
docs/: dev-getting-started.md  driver_install.html  faq.md  flm_npu_linux.html  gfx1151_linux.html  index.html  marketplace.html  models.html  publish_website_docs.py  self_hosted_runners.md  update_readme_marketplace.py
docs/assets/: common.css  footer.js  install-selector.js  marketplace.css  models.css  models.js  navbar.js  news-data.js  news.css  website-styles.css
docs/news/: gpt-oss.html  index.html  lemonade-arcade.html
docs/server/: README.md  custom-models.md  lemonade-cli-experimental.md  lemonade-server-cli.md  server_integration.md  server_spec.md
docs/server/apps/: ai-dev-gallery.md  ai-toolkit.md  anythingLLM.md  continue.md  open-hands.md  open-webui.md
examples/: README.md  api_image_edits.py  api_image_generation.py  api_image_variations.py  migrate-to-systemd.sh  realtime_transcription.py
src/app/: main.js  package-lock.json  package.json  preload.js  styles.css
src/app/src/: global.d.ts
src/app/src/renderer/: App.tsx  AudioButton.tsx  BackendManager.tsx  ChatWindow.tsx  DownloadManager.tsx  LogsWindow.tsx  MarkdownMessage.tsx  MarketplacePanel.tsx  ModelManager.tsx  ModelOptionsModal.tsx  NumericSetting.tsx  SettingsPanel.tsx  StatusBar.tsx  Tabs.tsx  TabsContext.tsx  TitleBar.tsx  index.html
src/app/src/renderer/components/: BackendRow.tsx  ConnectedBackendRow.tsx  EmptyState.tsx  Icons.tsx  ImagePreviewList.tsx  InferenceControls.tsx  ModelSelector.tsx  RecordButton.tsx  TypingIndicator.tsx
src/app/src/renderer/components/panels/: EmbeddingPanel.tsx  ImageGenerationPanel.tsx  LLMChatPanel.tsx  RerankingPanel.tsx  TTSPanel.tsx  TranscriptionPanel.tsx
src/app/src/renderer/hooks/: useAudioCapture.ts  useBackendInstall.ts  useInferenceState.ts  useModels.tsx  useSystem.tsx  useTTS.ts  useVoiceTranscription.ts
src/app/src/renderer/recipes/: recipeOptionsConfig.ts
src/app/src/renderer/tabs/: ConnectionSettings.tsx  LLMChatSettings.tsx  TTSSettings.tsx
src/app/src/renderer/utils/: appSettings.ts  backendInstaller.ts  chatTypes.ts  clipboardUtils.ts  downloadTracker.ts  experienceModels.ts  marketplace.ts  modelData.ts  recipeNames.ts  serverConfig.ts  systemData.ts  textareaUtils.ts  websocketClient.ts
src/cpp/: CPackRPM.cmake  DOCKER_GUIDE.md  Multi-Model-Spec.md  postinst  postinst-full-mac  postinst-rpm  postrm  postrm-rpm  prerm  prerm-rpm
src/cpp/cli/: CMakeLists.txt  lemonade_client.cpp  main.cpp
src/cpp/include/lemon/: amdxdna_accel.h  backend_manager.h  cli_parser.h  error_types.h  model_manager.h  model_types.h  ollama_api.h  realtime_session.h  router.h  server.h  server_capabilities.h  single_instance.h  streaming_audio_buffer.h  streaming_proxy.h  system_info.h  vad.h  websocket_server.h  wrapped_server.h
src/cpp/include/lemon/backends/: backend_utils.h  fastflowlm_server.h  kokoro_server.h  llamacpp_server.h  ryzenaiserver.h  sd_server.h  whisper_server.h
src/cpp/include/lemon/utils/: aixlog.hpp  custom_args.h  http_client.h  json_utils.h  network_beacon.h  path_utils.h  version_utils.h
src/cpp/include/lemon_cli/: lemonade_client.h
src/cpp/include/lemon_tray/: agent_launcher.h  server_manager.h  tray_app.h
src/cpp/include/lemon_tray/platform/: linux_tray.h  macos_tray.h  tray_interface.h  windows_tray.h
src/cpp/installer/: Product.wxs.in
src/cpp/resources/: backend_versions.json  server_models.json
src/cpp/server/: anthropic_api.cpp  backend_manager.cpp  cli_parser.cpp  main.cpp  model_manager.cpp  ollama_api.cpp  realtime_session.cpp  recipe_options.cpp  router.cpp  server.cpp  streaming_audio_buffer.cpp  streaming_proxy.cpp  system_info.cpp  vad.cpp  websocket_server.cpp  wrapped_server.cpp
src/cpp/server/backends/: backend_utils.cpp  fastflowlm_server.cpp  kokoro_server.cpp  llamacpp_server.cpp  ryzenaiserver.cpp  sd_server.cpp  whisper_server.cpp
src/cpp/server/utils/: http_client.cpp  json_utils.cpp  network_beacon.cpp  path_utils.cpp  process_manager.cpp  version_utils.cpp  wmi_helper.cpp
src/cpp/tray/: CMakeLists.txt  agent_launcher.cpp  main.cpp  server_manager.cpp  tray_app.cpp
src/cpp/tray/platform/: linux_tray.cpp  macos_tray.mm  windows_tray.cpp
test/: requirements.txt  server_cli.py  server_cli2.py  server_endpoints.py  server_llm.py  server_sd.py  server_streaming_errors.py  server_system_info.py  server_whisper.py  test_flm_status.py  test_llamacpp_system_backend.py  test_ollama.py
test/utils/: capabilities.py  server_base.py  test_models.py
